// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    style={
      [
        {},
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      accessibilityLabel="Icon for Test"
      alt="Icon for Test"
      dataSet={{}}
      onError={[Function]}
      source={
        {
          "uri": "www.example.com",
        }
      }
      style={
        [
          {
            "maxWidth": "100%",
          },
          {
            "height": 50,
            "width": 50,
          },
        ]
      }
    />
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 21,
          "textDecorationLine": undefined,
        }
      }
    >
      Test
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`<Badge /> renders correctly with no name 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    style={
      [
        {},
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      accessibilityLabel="Badge Icon"
      alt="Badge Icon"
      dataSet={{}}
      onError={[Function]}
      source={
        {
          "uri": "www.example.com",
        }
      }
      style={
        [
          {
            "maxWidth": "100%",
          },
          {
            "height": 50,
            "width": 50,
          },
        ]
      }
    />
  </View>
</RNCSafeAreaProvider>
`;
